--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: perl
 perl:
   - 5.12
 
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq zsh
+
 script:
   - bash test/01_bash.t
   - zsh test/02_zsh.t
